<resources>
    <string name="google_api_key02">AIzaSyCgGJYijiCtS6cNwHhmVAUcKChNVpppewU</string>
    <string name="app_name">ChaüD</string>
    <string name="prompt_email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="email_registration">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="DEVICE_REG_TOKEN">DEVICE_REG_TOKEN</string>
    <string name="DEVICE_TOKEN">DEVICE_TOKEN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_email">Email</string>
    <string name="DELIVERY_REG">Delivery Registration</string>
    <string name="DELIVERY_LOCATION">Delivery Location</string>
    <string name="LAST_SIGN_IN_DELIVERY">LAST_SIGN_IN_DELIVERY</string>
    <string name="VENDOR">VENDOR</string>
    <string name="DELIVERY">DELIVERY</string>
    <string name="delivery_details">Home address</string>
    <string name="PAID_VENDORS_SECTION">Paid Vendors Brand Section</string>
    <string name="USER_PAID_VENDORS">User Paid Orders</string>
    <string name="DISPATCHED_ORDERS">Dispatched Orders</string>
    <string name="having_issues_with_login_or_registration">Having issues with login or registration ?</string>
    <string name="USER_REG">User Registration</string>
    <string name="ADMINS">admins</string>
    <string name="Teasers">Teasers</string>
    <string name="DISPATCHED_ORDERS_DELCINE">DISPATCHED_ORDERS_DELCINE</string>
    <string name="OPENED_ORDERS_COUNT">OPENED_ORDERS_COUNT</string>
</resources>