<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_back_color"
    android:id="@+id/register"
    tools:context=".UI.Register">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@mipmap/chau_logo" />

    <ScrollView
        android:layout_below="@id/logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/relLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textEmailReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/email_registration"
                    android:textColor="@color/Black"
                    android:textSize="25sp" />


                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/textEmailReg"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_lines"
                    android:hint="Name"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Black" />


                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/name"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_lines"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Black" />


                <EditText
                    android:id="@+id/Phone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/input_email"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_lines"
                    android:hint="Phone"
                    android:drawableRight="@drawable/ic_whatsapp_"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Black" />


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/Phone"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_lines"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Black" />

                <EditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/input_password"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_lines"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Black" />


                <EditText
                    android:id="@+id/delivery_guy__details"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/input_confirm_password"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_lines"
                    android:hint="@string/delivery_details"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Black" />



                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/photo_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/delivery_guy__details"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/transparent"
                    android:text="Choose image"
                    android:textAllCaps="false"
                    android:textColor="#000" />




                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/photo_selector"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/back_button"
                    android:text="Register"
                    android:textAllCaps="false"
                    android:textColor="#000" />

            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>