<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_back_color"
    tools:context=".UI.Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@mipmap/chau_logo" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            android:padding="20dp">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/transparent"
                    android:text="Sign up"
                    android:textAllCaps="false" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/back_way"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_baseline_arrow_back_24"
                    android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
                    android:textAllCaps="false" />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="Login"
                    android:textColor="#000"
                    android:textSize="35sp" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <EditText
                    android:id="@+id/email"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_lines"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Black" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/email"
                    android:layout_alignRight="@id/email"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_baseline_email_24" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/email"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_lines"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Black" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email"
                    android:layout_alignEnd="@id/password"
                    android:layout_alignRight="@id/password"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_baseline_lock_24" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/back_button"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textStyle="bold" />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relLayout2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/forgot_pass"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/back_forgot"
                    android:gravity="center_horizontal"
                    android:paddingEnd="5dp"
                    android:paddingRight="5dp"
                    android:text="Forgot Password"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="16sp" />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/link_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:padding="20sp"
                    android:text="@string/register"
                    android:textColor="@color/Black"
                    android:textSize="16sp" />

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:visibility="invisible" />

</RelativeLayout>